--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Awesome Tanks 2</title>
+    <title>Awesome Tanks 2 Unblocked on BirdHub</title>
     <meta name="HandheldFriendly" content="true" />
     <meta
       name="viewport"
@@ -10,10 +10,11 @@
     />
     <link href="styles/main.css" rel="stylesheet" />
     <link href="styles/fonts.css" rel="stylesheet" />
+    <link rel="shortcut icon" type="image/png" href="awesome-tanks-2-logo.jpeg" />
     <meta name="apple-mobile-web-app-title" content="Awesome Tanks 2" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <!-- Google adsense -->
+
     <script
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4988552421895566"
